--- a/BlogTeste2/BlogTeste2.csproj
+++ b/BlogTeste2/BlogTeste2.csproj
@@ -114,6 +114,15 @@
     </Compile>
     <Compile Include="Infra\BlogContext.cs" />
     <Compile Include="Infra\ConnectionFactory.cs" />
+    <Compile Include="Migrations\201703212158559_Inicial.cs" />
+    <Compile Include="Migrations\201703212158559_Inicial.Designer.cs">
+      <DependentUpon>201703212158559_Inicial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703212159443_AddInfoPublicacao.cs" />
+    <Compile Include="Migrations\201703212159443_AddInfoPublicacao.Designer.cs">
+      <DependentUpon>201703212159443_AddInfoPublicacao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -130,7 +139,14 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201703212158559_Inicial.resx">
+      <DependentUpon>201703212158559_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703212159443_AddInfoPublicacao.resx">
+      <DependentUpon>201703212159443_AddInfoPublicacao.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
