--- a/BlogTeste2/BlogTeste2.csproj
+++ b/BlogTeste2/BlogTeste2.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\PostController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\PostDAO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
