--- a/BlogTeste2/BlogTeste2.csproj
+++ b/BlogTeste2/BlogTeste2.csproj
@@ -271,6 +271,10 @@
     <Compile Include="Migrations\201704131814078_Identity.Designer.cs">
       <DependentUpon>201704131814078_Identity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704131848594_Autor.cs" />
+    <Compile Include="Migrations\201704131848594_Autor.Designer.cs">
+      <DependentUpon>201704131848594_Autor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\Post.cs" />
@@ -310,6 +314,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704131814078_Identity.resx">
       <DependentUpon>201704131814078_Identity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704131848594_Autor.resx">
+      <DependentUpon>201704131848594_Autor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
